1.0.0A1.0.0C1.0.0_1.0.0I1.0.0N1.0.0I1.0.0T1.0.0(1.0.0m1.0.0o1.0.0d1.0.0_1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0,1.0.0 1.0.011.0.0.1.0.001.0.0.1.0.001.0.0,1.0.0 1.0.0s1.0.0u1.0.0p1.0.0p1.0.0o1.0.0r1.0.0t1.0.0@1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0.1.0.0c1.0.0o1.0.0m1.0.0)1.0.0
1.0.0A1.0.0C1.0.0_1.0.0A1.0.0R1.0.0G1.0.0_1.0.0W1.0.0I1.0.0T1.0.0H1.0.0(1.0.0a1.0.0p1.0.0x1.0.0s1.0.0,1.0.0 1.0.0A1.0.0C1.0.0_1.0.0H1.0.0E1.0.0L1.0.0P1.0.0_1.0.0S1.0.0T1.0.0R1.0.0I1.0.0N1.0.0G1.0.0(1.0.0[1.0.0-1.0.0-1.0.0w1.0.0i1.0.0t1.0.0h1.0.0-1.0.0a1.0.0p1.0.0x1.0.0s1.0.0=1.0.0N1.0.0A1.0.0M1.0.0E1.0.0]1.0.0,1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0[1.0.0n1.0.0a1.0.0m1.0.0e1.0.0 1.0.0o1.0.0f1.0.0 1.0.0y1.0.0o1.0.0u1.0.0r1.0.0 1.0.0a1.0.0p1.0.0x1.0.0s1.0.0 1.0.0e1.0.0x1.0.0e1.0.0c1.0.0u1.0.0t1.0.0a1.0.0b1.0.0l1.0.0e1.0.0 1.0.0[1.0.0[1.0.0a1.0.0p1.0.0x1.0.0s1.0.0]1.0.0]1.0.0]1.0.0)1.0.0,1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0 1.0.0[1.0.0A1.0.0P1.0.0X1.0.0S1.0.0=1.0.0"1.0.0$1.0.0w1.0.0i1.0.0t1.0.0h1.0.0_1.0.0a1.0.0p1.0.0x1.0.0s1.0.0"1.0.0]1.0.0)1.0.0
1.0.0A1.0.0C1.0.0_1.0.0P1.0.0R1.0.0O1.0.0G1.0.0_1.0.0C1.0.0C1.0.0_1.0.0C1.0.091.0.091.0.0
1.0.0A1.0.0C1.0.0_1.0.0C1.0.0O1.0.0N1.0.0F1.0.0I1.0.0G1.0.0_1.0.0A1.0.0U1.0.0X1.0.0_1.0.0D1.0.0I1.0.0R1.0.0(1.0.0[1.0.0.1.0.0]1.0.0)1.0.0
1.0.0i1.0.0f1.0.0 1.0.0t1.0.0e1.0.0s1.0.0t1.0.0 1.0.0-1.0.0z1.0.0 1.0.0"1.0.0$1.0.0{1.0.0A1.0.0P1.0.0X1.0.0S1.0.0}1.0.0"1.0.0;1.0.0 1.0.0t1.0.0h1.0.0e1.0.0n1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0A1.0.0C1.0.0_1.0.0P1.0.0A1.0.0T1.0.0H1.0.0_1.0.0P1.0.0R1.0.0O1.0.0G1.0.0S1.0.0(1.0.0A1.0.0P1.0.0X1.0.0S1.0.0,1.0.0 1.0.0a1.0.0p1.0.0x1.0.0s1.0.021.0.0 1.0.0a1.0.0p1.0.0x1.0.0s1.0.0,1.0.0 1.0.0n1.0.0o1.0.0,1.0.0 1.0.0[1.0.0$1.0.0P1.0.0A1.0.0T1.0.0H1.0.0:1.0.0/1.0.0u1.0.0s1.0.0r1.0.0/1.0.0s1.0.0b1.0.0i1.0.0n1.0.0:1.0.0/1.0.0u1.0.0s1.0.0r1.0.0/1.0.0l1.0.0o1.0.0c1.0.0a1.0.0l1.0.0/1.0.0a1.0.0p1.0.0a1.0.0c1.0.0h1.0.0e1.0.021.0.0/1.0.0b1.0.0i1.0.0n1.0.0]1.0.0)1.0.0
1.0.0f1.0.0i1.0.0
1.0.0i1.0.0f1.0.0 1.0.0t1.0.0e1.0.0s1.0.0t1.0.0 1.0.0"1.0.0$1.0.0A1.0.0P1.0.0X1.0.0S1.0.0"1.0.0 1.0.0=1.0.0 1.0.0n1.0.0o1.0.0;1.0.0 1.0.0t1.0.0h1.0.0e1.0.0n1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0A1.0.0C1.0.0_1.0.0M1.0.0S1.0.0G1.0.0_1.0.0E1.0.0R1.0.0R1.0.0O1.0.0R1.0.0(1.0.0[1.0.0a1.0.0p1.0.0x1.0.0s1.0.0 1.0.0n1.0.0o1.0.0t1.0.0 1.0.0f1.0.0o1.0.0u1.0.0n1.0.0d1.0.0.1.0.0 1.0.0s1.0.0e1.0.0t1.0.0 1.0.0a1.0.0p1.0.0x1.0.0s1.0.0 1.0.0w1.0.0i1.0.0t1.0.0h1.0.0 1.0.0-1.0.0-1.0.0w1.0.0i1.0.0t1.0.0h1.0.0-1.0.0a1.0.0p1.0.0x1.0.0s1.0.0.1.0.0]1.0.0)1.0.0
1.0.0f1.0.0i1.0.0
1.0.0A1.0.0C1.0.0_1.0.0S1.0.0U1.0.0B1.0.0S1.0.0T1.0.0(1.0.0A1.0.0P1.0.0X1.0.0S1.0.0)1.0.0
1.0.0A1.0.0C1.0.0_1.0.0C1.0.0H1.0.0E1.0.0C1.0.0K1.0.0_1.0.0H1.0.0E1.0.0A1.0.0D1.0.0E1.0.0R1.0.0S1.0.0(1.0.0[1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0.1.0.0h1.0.0]1.0.0)1.0.0
1.0.0A1.0.0C1.0.0_1.0.0C1.0.0H1.0.0E1.0.0C1.0.0K1.0.0_1.0.0L1.0.0I1.0.0B1.0.0(1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0,1.0.0 1.0.0M1.0.0M1.0.0D1.0.0B1.0.0_1.0.0l1.0.0i1.0.0b1.0.0_1.0.0v1.0.0e1.0.0r1.0.0s1.0.0i1.0.0o1.0.0n1.0.0,1.0.0 1.0.0[1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0A1.0.0C1.0.0_1.0.0D1.0.0E1.0.0F1.0.0I1.0.0N1.0.0E1.0.0(1.0.0[1.0.0H1.0.0A1.0.0V1.0.0E1.0.0_1.0.0L1.0.0I1.0.0B1.0.0M1.0.0A1.0.0X1.0.0M1.0.0I1.0.0N1.0.0D1.0.0D1.0.0B1.0.0]1.0.0,1.0.0 1.0.0[1.0.011.0.0]1.0.0,1.0.0 1.0.0[1.0.0H1.0.0a1.0.0v1.0.0e1.0.0 1.0.0f1.0.0o1.0.0u1.0.0n1.0.0d1.0.0 1.0.0l1.0.0i1.0.0b1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0]1.0.0)1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0L1.0.0I1.0.0B1.0.0M1.0.0A1.0.0X1.0.0M1.0.0I1.0.0N1.0.0D1.0.0D1.0.0B1.0.0_1.0.0L1.0.0D1.0.0F1.0.0L1.0.0A1.0.0G1.0.0S1.0.0=1.0.0'1.0.0-1.0.0l1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0'1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0A1.0.0C1.0.0_1.0.0S1.0.0U1.0.0B1.0.0S1.0.0T1.0.0(1.0.0L1.0.0I1.0.0B1.0.0M1.0.0A1.0.0X1.0.0M1.0.0I1.0.0N1.0.0D1.0.0D1.0.0B1.0.0_1.0.0L1.0.0D1.0.0F1.0.0L1.0.0A1.0.0G1.0.0S1.0.0)1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0]1.0.0,1.0.0
1.0.0 1.0.0 1.0.0 1.0.0 1.0.0[1.0.0A1.0.0C1.0.0_1.0.0M1.0.0S1.0.0G1.0.0_1.0.0E1.0.0R1.0.0R1.0.0O1.0.0R1.0.0(1.0.0[1.0.0l1.0.0i1.0.0b1.0.0m1.0.0a1.0.0x1.0.0m1.0.0i1.0.0n1.0.0d1.0.0d1.0.0b1.0.0 1.0.0w1.0.0a1.0.0s1.0.0 1.0.0n1.0.0o1.0.0t1.0.0 1.0.0f1.0.0o1.0.0u1.0.0n1.0.0d1.0.0]1.0.0)1.0.0]1.0.0)1.0.0
1.0.0A1.0.0M1.0.0_1.0.0I1.0.0N1.0.0I1.0.0T1.0.0_1.0.0A1.0.0U1.0.0T1.0.0O1.0.0M1.0.0A1.0.0K1.0.0E1.0.0
1.0.0A1.0.0C1.0.0_1.0.0C1.0.0O1.0.0N1.0.0F1.0.0I1.0.0G1.0.0_1.0.0F1.0.0I1.0.0L1.0.0E1.0.0S1.0.0(1.0.0[1.0.0M1.0.0a1.0.0k1.0.0e1.0.0f1.0.0i1.0.0l1.0.0e1.0.0 1.0.0s1.0.0r1.0.0c1.0.0/1.0.0M1.0.0a1.0.0k1.0.0e1.0.0f1.0.0i1.0.0l1.0.0e1.0.0]1.0.0)1.0.0
1.0.0A1.0.0C1.0.0_1.0.0O1.0.0U1.0.0T1.0.0P1.0.0U1.0.0T1.0.0
1.0.0